# algorithmx-assignment

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  repomix-output.xml
backend/: config.py
backend/api/: chunking.py  ingestion.py  main.py
backend/api/routes/: chat.py  documents.py  retrieve.py  sessions.py
backend/db/: migrate.py
backend/db/migrations/: 0001_init.sql  0002_sessions_and_history.sql
backend/repositories/: documents.py  sessions.py
backend/services/: embeddings.py  llm.py  qdrant.py
ui/: app.py  run.py
